--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
+    "android:build": "npx eas build -p android --profile preview",
     "ios": "expo start --ios",
+    "ios:build": "npx eas build -p ios --profile preview",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
