--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
-    "android:build": "npx eas build -p android --profile preview",
+    "android:build": "eas build -p android --profile preview",
     "ios": "expo start --ios",
     "ios:build": "npx eas build -p ios --profile preview",
     "web": "expo start --web",
@@ -22,7 +22,6 @@
     "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "eas-cli": "^15.0.12",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-clipboard": "^7.0.1",
