--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,15 @@ web-build/
 expo-env.d.ts
 
 # Native
+.kotlin/
 *.orig.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+
+backup.**
 
 # Metro
 .metro-health-check*
@@ -36,3 +39,7 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+# generated native folders
+/ios
+/android
