--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build": "npx expo prebuild && cd android && ./gradlew assembleDebug ./gradlew assembleRelease"
+    "build": "npx expo prebuild && cd android && ./gradlew assembleDebug ./gradlew assembleRelease",
+    "build:web": "npx expo export -p web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
