--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Server
 
 on:
     push:
-        branches: [master] # или ваша основная ветка
+        branches: [main]
 
 jobs:
     deploy:
@@ -15,7 +15,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 18 # укажите нужную версию
+                  node-version: 18
 
             - name: Install dependencies
               run: npm ci
