--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,10 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Create .env file
+              run: |
+                  echo "API_URL=${{ secrets.API_URL }}" >> .env
+
             - name: Build project
               run: npm run build:web
 
