--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
     "expo": "~54.0.10",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
